Add job_metrics_conf.xml to .hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -62,6 +62,7 @@ job_conf.xml
 data_manager_conf.xml
 shed_data_manager_conf.xml
 object_store_conf.xml
+job_metrics_conf.xml
 config/*
 static/welcome.html.*
 static/welcome.html
