Add a very basic framework to the Tool Shed for creating a Galaxy flavor Docker Image that uses Bjoern Gruning's Galaxy Docker project.  This is a proof-of-concept that should be enhanced if kept.

--- a/tool_shed_wsgi.ini.sample
+++ b/tool_shed_wsgi.ini.sample
@@ -90,6 +90,9 @@ sendmail_path = /usr/sbin/sendmail
 # Profiling middleware (cProfile based)
 ## use_profile = True
 
+# Enable creation of Galaxy flavor Docker Image
+#enable_galaxy_flavor_docker_image = False
+
 # Use the new iframe / javascript based layout
 use_new_layout = true
 
