--- a/.hgignore
+++ b/.hgignore
@@ -16,6 +16,7 @@ scripts/scramble/archives
 
 # Database stuff
 database/beaker_sessions
+database/citations
 database/community_files
 database/compiled_templates
 database/files
