Automatically use a virtualenv in galaxy_root/.venv/ if it exists (a la Pulsar).

--- a/.hgignore
+++ b/.hgignore
@@ -11,6 +11,9 @@ scripts/scramble/build
 scripts/scramble/lib
 scripts/scramble/archives
 
+# Python virtualenv
+.venv
+
 # Database stuff
 database/beaker_sessions
 database/community_files
