--- a/universe_wsgi.ini.sample
+++ b/universe_wsgi.ini.sample
@@ -141,6 +141,12 @@ paste.app_factory = galaxy.web.buildapp:app_factory
 # Galaxy tool panel.  If the following setting remains commented, the default setting will be True.
 #check_migrate_tools = True
 
+# File that contains the XML section and tool tags from all tool panel config
+# files integrated into a single file that defines the tool panel layout.  This
+# file can be changed by the Galaxy administrator to alter the layout of the
+# tool panel. If not present, Galaxy will create it.
+#integrated_tool_panel_config = integrated_tool_panel.xml
+
 # Default path to the directory containing the tools defined in tool_conf.xml.
 # Other tool config files must include the tool_path as an attribute in the <toolbox> tag.
 #tool_path = tools
