--- a/universe_wsgi.ini.sample
+++ b/universe_wsgi.ini.sample
@@ -364,12 +364,10 @@ visualization_plugins_directory = config/plugins/visualizations
 # which browsers should be available.  URLs and builds available at these
 # browsers are defined in the specifield files.
 
-# UCSC browsers:
-#ucsc_build_sites = tool-data/shared/ucsc/ucsc_build_sites.txt
+# UCSC browsers: tool-data/shared/ucsc/ucsc_build_sites.txt
 #ucsc_display_sites = main,test,archaea,ucla
 
-# GBrowse servers:
-#gbrowse_build_sites = tool-data/shared/gbrowse/gbrowse_build_sites.txt
+# GBrowse servers: tool-data/shared/gbrowse/gbrowse_build_sites.txt
 #gbrowse_display_sites = modencode,sgd_yeast,tair,wormbase,wormbase_ws120,wormbase_ws140,wormbase_ws170,wormbase_ws180,wormbase_ws190,wormbase_ws200,wormbase_ws204,wormbase_ws210,wormbase_ws220,wormbase_ws225
 
 # If use_remote_user = True, display application servers will be denied access
