--- a/datatypes_conf.xml.sample
+++ b/datatypes_conf.xml.sample
@@ -320,8 +320,8 @@
       The `display` attributes on the `ucsc` and `gbrowse` sites replace the
       `ucsc_display_sites` and `gbrowse_display_sites` options in
       universe_wsgi.ini. Because these are used by "old-style" display
-      applications, their types cannot not change if you want the old-style
-      display links for these sites to work.
+      applications, their types cannot change if you want the old-style display
+      links for these sites to work.
       -->
       <site type="ucsc" file="tool-data/shared/ucsc/ucsc_build_sites.txt" display="main,test,archaea,ucla"/>
       <site type="gbrowse" file="tool-data/shared/gbrowse/gbrowse_build_sites.txt" display="modencode,sgd_yeast,tair,wormbase,wormbase_ws120,wormbase_ws140,wormbase_ws170,wormbase_ws180,wormbase_ws190,wormbase_ws200,wormbase_ws204,wormbase_ws210,wormbase_ws220,wormbase_ws225"/>
