--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "galaxy"
   ],
   "devDependencies": {
-    "grunt-contrib-copy": "^0.5.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
