YAML tool source - handle conditions, repeats, more test attributes.

--- a/test/functional/tools/simple_constructs.yml
+++ b/test/functional/tools/simple_constructs.yml
@@ -7,6 +7,8 @@ command:
     echo "$inttest"   >> $out_file1;
     echo "$floattest" >> $out_file1;
     cat "$simp_file"   >> $out_file1;
+    cat "$more_files[0].nestinput"   >> $out_file1;
+    echo "$p1.p1val"  >> $out_file1;
 inputs:
 - name: booltest
   type: boolean
@@ -21,6 +23,27 @@ inputs:
   value: 1.0
 - name: simp_file
   type: data
+- name: more_files
+  label: "More Files"
+  type: repeat
+  blocks:
+    - type: data
+      name: nestinput
+- name: p1
+  type: conditional
+  test:
+    type: boolean
+    name: p1use
+  when:
+    true:
+      - name: p1val
+        type: text
+        value: p1used
+    false:
+      - name: p1val
+        type: text
+        value: p1notused
+
 outputs:
   out_file1:
     format: txt
@@ -30,6 +53,8 @@ tests:
     inttest: 12456
     floattest: 6.789
     simp_file: simple_line.txt
+    nestinput: simple_line_alternative.txt
+    p1use: true
   outputs:
     out_file1:
       asserts:
@@ -41,3 +66,16 @@ tests:
           line: 6.789
         has_line:
           line: "This is a line of text."
+        has_line:
+          line: "This is a different line of text."
+        has_line:
+          line: p1used
+- inputs:
+    simp_file: simple_line.txt
+    nestinput: simple_line_alternative.txt
+    p1use: false
+  outputs:
+    out_file1:
+      asserts:
+        has_line:
+          line: p1notused
